--- a/app_holist_care/pubspec.yaml
+++ b/app_holist_care/pubspec.yaml
@@ -38,6 +38,7 @@ dependencies:
   qr_code_scanner: ^0.7.0
   flutter_bloc: ^8.0.1
   get_it: ^7.2.0
+  page_transition: ^2.0.5
 
 dev_dependencies:
   flutter_test:
