--- a/app_holist_care/pubspec.yaml
+++ b/app_holist_care/pubspec.yaml
@@ -39,6 +39,10 @@ dependencies:
   flutter_bloc: ^8.0.1
   get_it: ^7.2.0
   page_transition: ^2.0.5
+  dio: ^4.0.6
+  shared_preferences: ^2.0.13
+  lottie: ^1.2.2
+  
 
 dev_dependencies:
   flutter_test:
@@ -50,6 +54,16 @@ dev_dependencies:
   # package. See that file for information about deactivating specific lint
   # rules and activating additional ones.
   flutter_lints: ^1.0.0
+  flutter_launcher_icons: ^0.9.2
+  flutter_app_name: ^0.1.1
+
+flutter_app_name:
+  name: "Holist Care"
+
+flutter_icons:
+  android: "launcher_icon"
+  ios: true
+  image_path: "assets/images/icon.png"
 
 # For information on the generic Dart part of this file, see the
 # following page: https://dart.dev/tools/pub/pubspec
